name:                pure-css
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-css
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Flag no-use-template-haskell
     Description: disable template haskell for a Lift SCSS instance
     Default: False
     Manual: True

library
  build-depends:
    base >= 4.8 && < 5,
    ef >= 3 && < 4,
    pure-core >= 0.7 && < 1,
    pure-default >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    containers,
    template-haskell

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.CSS

  default-language: Haskell2010
