name:                pure-css
version:             0.8.0.0
homepage:            purehs.org/doc/pure-css
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-css.git

Flag no-use-template-haskell
     Description: disable template haskell for a Lift SCSS instance
     Default: False
     Manual: True

library
  build-depends:
    base,
    ef,
    pure-core,
    pure-default,
    pure-txt,
    containers,
    template-haskell

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.CSS

  default-language: Haskell2010
